--- a/index.html
+++ b/index.html
@@ -23,9 +23,53 @@
 
     </header>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="section-one">
+            <div>
+                <h1>Explore and Travel</h1>
+                <p>Holiday finder</p>
+                <div class="input-one">
+                    <input type="text" placeholder="Location">
+                    <input type="text" placeholder="Activity">
+                </div>
+                <div class="input-two">
+                    <input type="text" placeholder="Grade">
+                    <input type="text" placeholder="Date">
+                </div>
+                <div>
+                    <button>Explore</button>
+                </div>
+            </div>
+            <div class="img-section1"></div>
+        </section>
+
+        <section class="section-two">
+            <div class="img-section2"></div>
+            <div>
+                <h2>A new way to explore the world </h2>
+                <p>For decades travellers have reached for Lonely Planet books when looking to plan and execute their
+                    perfect
+                    trip, but now, they can also let Lonely Planet Experiences lead the way</p>
+                <div>
+                    <button>Learn more</button>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section-three-text">
+                <h2>Featured destinations</h2>
+                <p>View all</p>
+            </div>
+            <div class="section-three-img">
+                <div class="img-section3-one"></div>
+
+                <div class="img-section3-two"></div>
+
+                <div class="img-section3-three"></div>
+
+                <div class="img-section3-four"></div>
+            </div>
+        </section>
         <section></section>
     </main>
     <footer></footer>
