travel-layout-pro

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="img-section1"></div>
         </section>
 
-        <section class="section-two">
+        <section class="section-two-four">
             <div class="img-section2"></div>
             <div>
                 <h2>A new way to explore the world </h2>
@@ -58,7 +58,7 @@
         <section>
             <div class="section-three-text">
                 <h2>Featured destinations</h2>
-                <p>View all</p>
+                <p class="view">View all</p>
             </div>
             <div class="section-three-img">
                 <div class="img-section3-one"></div>
@@ -70,7 +70,17 @@
                 <div class="img-section3-four"></div>
             </div>
         </section>
-        <section></section>
+        <section class="section-two-four">
+            <div>
+                <h2>Guides by Thousand Sunny</h2>
+                <p>Packed with tips and advice from our on-the-ground experts, our city guides app (iOS and Android) is
+                    the ultimate resource before and during a trip.</p>
+                <div>
+                    <button>Download</button>
+                </div>
+            </div>
+            <div class="img-section4"></div>
+        </section>
     </main>
     <footer></footer>
 </body>
