travel-layout-all

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <section>
             <div class="section-three-text">
                 <h2>Featured destinations</h2>
-                <p class="view">View all</p>
+                <div class="view">
+                    <p>View all</p>
+                    <div class="view-img"></div>
+                </div>
             </div>
             <div class="section-three-img">
                 <div class="img-section3-one"></div>
@@ -82,7 +85,39 @@
             <div class="img-section4"></div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-one">
+            <div class="img-logo"></div>
+            <p>Plan and book your perfect trip with
+                expert advice, travel tips destination
+                information from us</p>
+            <p class="©">©2020 Thousand Sunny. All rights reserved</p>
+        </div>
+        <div>
+            <h3>Destinations</h3>
+            <p>Africa</p>
+            <p> Antarctica</p>
+            <p> Asia</p>
+            <p>Europe</p>
+            <p>America</p>
+        </div>
+        <div>
+            <h3>Shop</h3>
+            <p>Destination Guides</p>
+            <p>Pictorial & Gifts</p>
+            <p>Special Offers</p>
+            <p>Delivery Times</p>
+            <p>FAQs</p>
+        </div>
+        <div>
+            <h3>Interests</h3>
+            <p>Adventure Travel</p>
+            <p>Art And Culture</p>
+            <p> Wildlife And Nature</p>
+            <p>Family Holidays</p>
+            <p>Food And Drink</p>
+        </div>
+    </footer>
 </body>
 
 </html>
